made login prettier

--- a/login.css
+++ b/login.css
@@ -1,6 +1,6 @@
 #login-heading {
-	margin-top: 100px;
-	margin-bottom: 50px;
+/*	margin-top: 100px;
+*/	margin-bottom: 50px;
 	text-align: center;
 	font-size: 30px;
 }
