--- a/pet_css.css
+++ b/pet_css.css
@@ -14,20 +14,20 @@ h1 {
 	width: 100%;
 }
 
-#petContainer {
+#pet {
 	position: relative;
 }
 
 #petDiv {
 	z-index: 0;
-	position:absolute;
+	margin-top: 100px;
 }
 
 #sunglassesDiv {
 	z-index: 1;
 	position: absolute;
-	top: 15%;
-	left: 22%;
+	top: 35%;
+	left: 33%;
 }
 
 #boneDiv {
@@ -44,13 +44,13 @@ h1 {
 #hatDiv {
 	z-index: 1;
 	position: absolute;
-	left: 22%;
-	top: -13%;
+	left: 33%;
+	top: 13%;
 }
 
 #bowtieDiv {
 	z-index: 1;
 	position: absolute;
-	left: 22%;
-	top: 50%;
+	left: 33%;
+	top: 59%;
 }
