--- a/index.css
+++ b/index.css
@@ -3,8 +3,11 @@
 	font-size: 40px;
 }
 
-#plate-image-div {
-    background-repeat: no-repeat;
-    background-position: 50%;
-    border-radius: 50%;
+#plate-image {
+    width: 450px;
+}
+
+#tempStarCard {
+	max-width: 100px;
+	min-width: 100px;
 }
